--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.6.3",
     "connected-react-router": "^6.8.0",
     "dotenv": "^8.2.0",
+    "gh-pages": "^3.1.0",
     "history": "^4.10.1",
     "lodash": "^4.17.20",
     "react": "^17.0.1",
